--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-08-23T23:46:00.053Z",
-        "lastAccessed": "2025-08-23T23:46:00.054Z"
+        "creation": "2025-08-24T08:02:02.263Z",
+        "lastAccessed": "2025-08-24T08:02:02.264Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-23T23:46:00.054Z",
-        "lastAccessed": "2025-08-23T23:46:00.054Z"
+        "creation": "2025-08-24T08:02:02.264Z",
+        "lastAccessed": "2025-08-24T08:02:02.264Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-23T23:46:00.054Z",
-        "lastAccessed": "2025-08-23T23:46:00.054Z"
+        "creation": "2025-08-24T08:02:02.264Z",
+        "lastAccessed": "2025-08-24T08:02:02.264Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-23T23:46:00.054Z",
-        "lastAccessed": "2025-08-23T23:46:00.054Z"
+        "creation": "2025-08-24T08:02:02.264Z",
+        "lastAccessed": "2025-08-24T08:02:02.264Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-23T23:46:00.054Z",
-        "lastAccessed": "2025-08-23T23:46:00.054Z"
+        "creation": "2025-08-24T08:02:02.264Z",
+        "lastAccessed": "2025-08-24T08:02:02.264Z"
     },
     {
         "key": "vpd",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-23T23:46:00.054Z",
-        "lastAccessed": "2025-08-23T23:46:00.054Z"
+        "creation": "2025-08-24T08:02:02.264Z",
+        "lastAccessed": "2025-08-24T08:02:02.264Z"
     },
     {
         "key": "pas",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-23T23:46:00.054Z",
-        "lastAccessed": "2025-08-23T23:46:00.054Z"
+        "creation": "2025-08-24T08:02:02.264Z",
+        "lastAccessed": "2025-08-24T08:02:02.264Z"
     },
     {
         "key": "locale",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-23T23:46:00.054Z",
-        "lastAccessed": "2025-08-23T23:46:00.054Z"
+        "creation": "2025-08-24T08:02:02.264Z",
+        "lastAccessed": "2025-08-24T08:02:02.264Z"
     },
     {
         "key": "m_pixel_ratio",
@@ -77,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-23T23:46:00.054Z",
-        "lastAccessed": "2025-08-23T23:46:00.054Z"
+        "creation": "2025-08-24T08:02:02.264Z",
+        "lastAccessed": "2025-08-24T08:02:02.264Z"
     },
     {
         "key": "wd",
@@ -86,8 +86,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-23T23:46:00.054Z",
-        "lastAccessed": "2025-08-23T23:46:00.054Z"
+        "creation": "2025-08-24T08:02:02.264Z",
+        "lastAccessed": "2025-08-24T08:02:02.264Z"
     },
     {
         "key": "c_user",
@@ -95,43 +95,43 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-23T23:46:00.054Z",
-        "lastAccessed": "2025-08-23T23:46:00.054Z"
+        "creation": "2025-08-24T08:02:02.264Z",
+        "lastAccessed": "2025-08-24T08:02:02.264Z"
     },
     {
         "key": "xs",
-        "value": "48%3A0PaMFJcpZhLzQw%3A2%3A1755992605%3A-1%3A-1",
+        "value": "42%3A7RcP_rCXFgS_OA%3A2%3A1756022472%3A-1%3A-1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-23T23:46:00.054Z",
-        "lastAccessed": "2025-08-23T23:46:00.054Z"
+        "creation": "2025-08-24T08:02:02.264Z",
+        "lastAccessed": "2025-08-24T08:02:02.264Z"
     },
     {
         "key": "fr",
-        "value": "0GWAN66ZVPUlbLMDb.AWci6s5Yg63wJt0UfUp9BikrxxLlVGuGO8cQsXgjnvwEcMblQfw.BoimJI..AAA.0.0.BoqlIf.AWf2ncXFG-5k9WtiSURCIQZcRzE",
+        "value": "0GWAN66ZVPUlbLMDb.AWcD0lVCxSkRW_vLySjp6TK3525vSHA5ZOivuuVQq_KAGSEcRCY.BoimJI..AAA.0.0.Boqsbi.AWdt9WW5GAtltAQPDn5OObFQvlM",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-23T23:46:00.054Z",
-        "lastAccessed": "2025-08-23T23:46:00.054Z"
+        "creation": "2025-08-24T08:02:02.264Z",
+        "lastAccessed": "2025-08-24T08:02:02.264Z"
     },
     {
         "key": "fbl_st",
-        "value": "101431377%3BT%3A29266543",
+        "value": "101725335%3BT%3A29267041",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-23T23:46:00.054Z",
-        "lastAccessed": "2025-08-23T23:46:00.054Z"
+        "creation": "2025-08-24T08:02:02.264Z",
+        "lastAccessed": "2025-08-24T08:02:02.264Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2901%3Btimestamp%3A1755992608",
+        "value": "v2%3Bclient_version%3A2901%3Btimestamp%3A1756022498",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-23T23:46:00.054Z",
-        "lastAccessed": "2025-08-23T23:46:00.054Z"
+        "creation": "2025-08-24T08:02:02.264Z",
+        "lastAccessed": "2025-08-24T08:02:02.264Z"
     }
 ]
